feat(kubectl-plugin): hack to make plugin usable with 102
